@@ -294,6 +294,28 @@ sub _setConf
 
     # FIXME: this may cause unexpected samba restarts during save changes, etc
     #$self->_writeCronFile();
+
+    $self->_setupActiveSync();
+}
+
+sub _setupActiveSync
+{
+    my ($self) = @_;
+
+    my $enabled = (-f '/etc/apache2/conf-enabled/zentyal-activesync.conf');
+    my $enable = $self->_activesyncEnabled();
+    if ($enable) {
+        EBox::Sudo::root('a2enconf zentyal-activesync');
+    } else {
+        EBox::Sudo::silentRoot('a2disconf zentyal-activesync');
+    }
+    if ($enabled xor $enable) {
+        my $global = $self->global();
+        $global->modChange('webserver');
+        if ($global->modExists('sogo')) {
+            $global->addModuleToPostSave('sogo');
+        }
+    }
 }
 
 sub _writeCronFile
@@ -853,6 +875,12 @@ sub _rpcProxyHostForDomain
                                              ));
     }
     return $matchedHost . '.' . $domain;
+}
+
+sub _activesyncEnabled
+{
+    my ($self) = @_;
+    return $self->model('Configuration')->value('activesync');
 }
 
 sub _rpcProxyDomain
