@@ -1,3 +1,5 @@
+HEAD
+	+ Allow ActiveSync setup if z-push or sogo-activesync are installed
 3.4.1
 	+ Generate master password for IMAP access
 3.4
